satellite-gcs-rts/build_err3_utf8.txt
cargo : warning: unused 
import: `fmt`
At line:1 char:1
+ cargo check > 
build_err3.txt 2>&1; 
Get-Content 
build_err3.txt -Encodi ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~
    + CategoryInfo        
      : NotSpecified: (w  
  arning: unused import   
 : `fmt`:String) [], R    
emoteException
    + FullyQualifiedError 
   Id : NativeCommandErr  
  or
 
 --> 
ground\src\main.rs:1:26
  |
1 | ...ber::{fmt, EnvFi...
  |          ^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of 
`#[warn(unused)]`) on by 
default

warning: unused import: 
`tokio::net::UdpSocket`
 --> 
ground\src\main.rs:8:5
  |
8 | use 
tokio::net::UdpSocket;
  |     
^^^^^^^^^^^^^^^^^^^^^

    Checking satellite 
v0.1.0 (C:\Users\User\Docu
ments\APU\RTS\Assignment\S
atellite_Sim\satellite-gcs
-rts\satellite)
warning: `ground` (bin 
"ground") generated 2 
warnings (run `cargo fix 
--bin "ground" -p ground` 
to apply 2 suggestions)
warning: unused import: 
`fmt`
 --> 
satellite\src\main.rs:1:26
  |
1 | use 
tracing_subscriber::{fmt, 
EnvFilter};
  |                       
   ^^^
  |
  = note: 
`#[warn(unused_imports)]` 
(part of 
`#[warn(unused)]`) on by 
default

warning: unused import: 
`tokio::net::UdpSocket`
 --> 
satellite\src\main.rs:9:5
  |
9 | use 
tokio::net::UdpSocket;
  |     
^^^^^^^^^^^^^^^^^^^^^

error[E0061]: this 
function takes 5 
arguments but 6 arguments 
were supplied
   --> satellite\src\main.
rs:111:31
    |
111 |     handles.push(tok
io::spawn(uplink_rx::run_u
plink_rx(
    |                     
          
^^^^^^^^^^^^^^^^^^^^^^^^
112 |         my_rx_addr, 
state.clone(), 
sim_start.clone(), 
cancel.clone(), 
hb_uplink.clone(), 
metrics_snapshot.clone()
    |                     
                          
                          
                 
------------------------ 
unexpected argument #6 of 
type `Arc<tokio::sync::Mut
ex<SatMetricsSnapshot>>`
    |
note: function defined 
here
   --> satellite\src\uplin
k_rx.rs:11:14
    |
 11 | pub async fn 
run_uplink_rx(
    |              
^^^^^^^^^^^^^
help: remove the extra 
argument
    |
112 -         my_rx_addr, 
state.clone(), 
sim_start.clone(), 
cancel.clone(), 
hb_uplink.clone(), 
metrics_snapshot.clone()
112 +         my_rx_addr, 
state.clone(), 
sim_start.clone(), 
cancel.clone(), 
hb_uplink.clone()
    |

For more information 
about this error, try 
`rustc --explain E0061`.
warning: `satellite` (bin 
"satellite") generated 2 
warnings
error: could not compile 
`satellite` (bin 
"satellite") due to 1 
previous error; 2 
warnings emitted
